src/test/resources/parse/DuplicateMut.casc
mut mut class DuplicateMut

impl DuplicateMut {
    mut fn a1() {}
}